Day_20/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-loadbalancer
spec:
  selector:
    app: meetmux
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
